# Predictor_cancer_rectal

./: .coverage  .gitignore  ANALISIS_METRICAS.md  DOC_SISTEMA_V1.md  LAUNCHER.bat  MANUAL_USUARIO.md  README.md  ejecutar_comparacion_tabular.bat  ejecutar_reentreno_base_multiclase.bat  ejecutar_reentreno_completo_multiclase.bat  mlflow.db  pyproject.toml  pytest.ini
Predictor_api/: README.md  main.py
Predictor_front/: README.md  angular.json  app.py  package-lock.json  package.json  tailwind.config.js
Predictor_front/src/: styles.css
Predictor_front/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts  prediction.service.ts
Predictor_models/: ESTRUCTURA_DATOS.md  __init__.py  organizar_imagenes.py
Predictor_models/app/: app.py
Predictor_models/configs/: binary_baseline.yaml  multiclass_baseline.yaml
Predictor_models/pipeline/: audit_dataset.py  audit_tabular_data.py  clean_artifacts.py  config.py  dataset.py  evaluate.py  evaluate_tabular.py  gradcam.py  inference.py  metrics.py  models.py  prepare_data.py  prepare_tabular_data.py  preprocess_inpaint.py  preprocess_masks.py  preview_preprocessing.py  run_initial_pipeline.py  run_model_comparison.py  run_tabular_model_comparison.py  summarize_experiments.py  summarize_tabular_experiments.py  tabular_inference.py  tabular_utils.py  train.py  train_tabular.py  transforms.py  utils.py
docs/: memoria_tecnica.md
docu/: ANALISIS_METRICAS.md  DOC_SISTEMA_V1.md  ESTRUCTURA_DATOS.md  Instalacion.md  front.md
mlruns/0/: meta.yaml
tests/: conftest.py
tests/Predictor_api/: test_main.py
(+67 files in other folders)
