[project]
name = "predictor-cancer-rectal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "mlflow>=3.11.1",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.30.0",
]
